# cl-3d

./: .gitattributes  .gitmodules  MANIFEST.in  README.md  README.rst  setup.cfg
.datalad/: config
configs/: bench.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: contrastive_context.yaml
configs/datamodule/sampling/: circle.yaml  circle_large.yaml  circle_small.yaml  neighbor.yaml  same.yaml  sphere.yaml  sphere_large.yaml  sphere_small.yaml  touching.yaml
configs/debug/: default.yaml  profiler.yaml  small_epoch.yaml
configs/experiment/: default.yaml
configs/experiment/resnet18/: circle.yaml  circle_large.yaml  neighbor.yaml  same.yaml  sphere.yaml  sphere_large.yaml  sphere_small.yaml  touching.yaml
configs/experiment/resnet34/: circle.yaml  circle_large.yaml  neighbor.yaml  same.yaml  sphere.yaml  sphere_large.yaml  sphere_small.yaml  touching.yaml
configs/experiment/resnet50planes64/: circle.yaml  circle_large.yaml  neighbor.yaml  same.yaml  sphere.yaml  sphere_large.yaml  sphere_small.yaml  touching.yaml
configs/experiment/resnet50planes8/: circle.yaml  circle_large.yaml  circle_small.yaml  neighbor.yaml  same.yaml  sphere.yaml  sphere_large.yaml  sphere_small.yaml  touching.yaml
configs/experiment/scaling/: node_scaling.yaml
configs/model/: resnet18.yaml  resnet34.yaml  resnet50.yaml  resnet50_planes8.yaml  resnetencoder.yaml
configs/trainer/: ddp.yaml  default.yaml
doc/: node_scaling.csv
logs/: .gitignore
models/cl-2d/: hparams.yaml  resnet50_planes8_962-1083_circle_small.ckpt
models/cl-3d/: hparams.yaml  resnet50_planes8_962-1083_sphere_small.ckpt
notebooks/: scaling_plot_nodes.ipynb
scripts/: apply-encoder.py  apply-encoder.sbatch  dev_jureca.sbatch  train.py  train_jureca.sbatch
scripts/scaling/: train_jureca_scale_1.sbatch  train_jureca_scale_16.sbatch  train_jureca_scale_1_2.sbatch  train_jureca_scale_2.sbatch  train_jureca_scale_3.sbatch  train_jureca_scale_4.sbatch  train_jureca_scale_6.sbatch  train_jureca_scale_8.sbatch
src/cl_3d/: _version.py  training_pipeline.py
src/cl_3d/datamodules/: contrastive_datamodule.py
src/cl_3d/datamodules/components/: data.py  sampling.py
src/cl_3d/models/: contrastive_module.py
src/cl_3d/models/components/: distributed.py  encoder.py  layers.py
src/cl_3d/utils/: __init__.py  io.py  loss.py
